--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "release": "NODE_ENV=\"release\" node_modules/gulp/bin/gulp.js build"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "async": "^2.6.0",
     "aws-sdk": "^2.156.0",
@@ -23,6 +23,7 @@
     "connect-history-api-fallback": "^1.3.0",
     "const": "^1.0.0",
     "cpx": "^1.5.0",
+    "css-loader": "^0.28.11",
     "del": "^2.2.2",
     "exports-loader": "^0.6.4",
     "fs": "^0.0.1-security",
@@ -38,9 +39,10 @@
     "gulp-sftp": "^0.1.5",
     "gulp-sourcemaps": "^2.6.0",
     "gulp-stylus": "^2.6.0",
-    "gulp-uglify": "^3.0.0",
+    "gulp-uglify-es": "^1.0.1",
     "gulp-watch": "^4.3.11",
     "gulp.spritesmith": "^6.5.1",
+    "html-loader": "^0.5.5",
     "imagemin-mozjpeg": "^6.0.0",
     "imagemin-pngquant": "^5.0.1",
     "imports-loader": "^0.7.1",
@@ -50,6 +52,7 @@
     "s3": "^4.4.0",
     "shader-loader": "^1.3.0",
     "stats-js": "^1.0.0-alpha1",
+    "style-loader": "^0.20.3",
     "superagent": "^3.5.2",
     "webpack": "^2.6.0",
     "webpack-stream": "^3.2.0",
