--- a/package.json
+++ b/package.json
@@ -48,13 +48,14 @@
     "imports-loader": "^0.7.1",
     "merge-stream": "^1.0.1",
     "path": "^0.12.7",
+    "pug": "^2.0.3",
     "run-sequence": "^1.2.2",
     "s3": "^4.4.0",
     "shader-loader": "^1.3.0",
     "stats-js": "^1.0.0-alpha1",
     "style-loader": "^0.20.3",
     "superagent": "^3.5.2",
-    "webpack": "^2.6.0",
+    "webpack": "^4.2.0",
     "webpack-stream": "^3.2.0",
     "wolfy87-eventemitter": "^5.2.1"
   },
