--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "del": "^2.2.2",
     "exports-loader": "^0.6.4",
     "fs": "^0.0.1-security",
-    "gsap": "^1.19.1",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-clean-css": "^3.6.0",
@@ -54,14 +53,13 @@
     "shader-loader": "^1.3.0",
     "stats-js": "^1.0.0-alpha1",
     "style-loader": "^0.20.3",
-    "superagent": "^3.5.2",
     "webpack": "^4.2.0",
-    "webpack-stream": "^3.2.0",
-    "wolfy87-eventemitter": "^5.2.1"
+    "webpack-stream": "^3.2.0"
   },
   "dependencies": {
-    "eventemitter": "^0.3.3",
+    "gsap": "^1.19.1",
     "jquery": "^3.2.1",
-    "whatwg-fetch": "^2.0.3"
+    "whatwg-fetch": "^2.0.3",
+    "wolfy87-eventemitter": "^5.2.1"
   }
 }
